# AITBC

./: .aitbc.yaml  .deployment_progress  .editorconfig  .env.example  .gitea-token  .gitea_token.sh  .gitignore  .last_backup  .lycheeignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yaml  AGENTS.md  AGENT_IDENTITY_SDK_IMPLEMENTATION_SUMMARY.md  AITBC1_UPDATED_COMMANDS.md  AITBC_PAYMENT_ARCHITECTURE.md  BITCOIN-WALLET-SETUP.md  BOTH_NODES_CONSOLIDATION_VERIFIED.md  CHANGELOG.md  CLEANUP_SUMMARY.md  CLI_ENHANCEMENT_SUMMARY.md  CLI_RENAMING_SUMMARY.md  COMPLETE_TEST_PLAN.md  CROSS_CHAIN_REPUTATION_STAGING_DEPLOYMENT.md  CROSS_CHAIN_REPUTATION_STAGING_SUCCESS.md  CROSS_NODE_OPENCLAW_AITBC_SKILL.md  DEPLOYMENT_READINESS_REPORT.md  DEV_LOGS.md  Dockerfile  Dockerfile.otel-collector  E2E_TEST_CREATION_SUMMARY.md  ENHANCED_SERVICES_IMPLEMENTATION_GUIDE.md  EXPLORER_FINAL_STATUS.md  EXPLORER_FIXES_SUMMARY.md  FINAL_CLI_CONSOLIDATION.md  GLOBAL_MARKETPLACE_IMPLEMENTATION_COMPLETE.md  HERMES_LISTENER_SOLUTION.md  HUB_STATUS.md  INTEGRATION_TEST_UPDATES.md  LICENSE  (+81 more)
apps/agent-coordinator/: Dockerfile  README.md  aitbc-agent-coordinator-wrapper.py  aitbc-agent-coordinator.service  pyproject.toml  test_agent_endpoint.py
apps/agent-management/: README.md  aitbc-agent-management-wrapper.py  aitbc-agent-management.service  aitbc-agent-registry-wrapper.py  pyproject.toml
apps/ai-service/: pyproject.toml
apps/aitbc-edge/: edge-api.service  pyproject.toml
apps/api-gateway/: README.md  aitbc-api-gateway.service  api-gateway.service  pyproject.toml
apps/blockchain-event-bridge/: .env.example  README.md  aitbc-blockchain-event-bridge-wrapper.py  aitbc-blockchain-event-bridge.service  pyproject.toml  pytest.ini
apps/blockchain-node/: .env.example  README.md  aitbc-blockchain-node-wrapper.py  aitbc-blockchain-node.service  aitbc-blockchain-p2p-wrapper.py  aitbc-blockchain-p2p.service  aitbc-blockchain-rpc-wrapper.py  aitbc-blockchain-rpc.service  aitbc-blockchain-sync-wrapper.py  aitbc-blockchain-sync.service  aitbc-blockchain-sync.timer  create_enhanced_genesis.py  create_genesis.py  fix_accounts.py  fix_block_metadata.py  fix_block_metadata2.py  fix_db.py  fix_env_path.py  fix_tx_metadata.py  fix_tx_metadata2.py  get_env.py  init_genesis.py  pyproject.toml  requirements.txt  test_mempool.py  test_mempool2.py  test_tx.py
apps/coordinator-api/: .env.example  =  DECOMPOSITION_PROGRESS.md  DOMAIN_REFACTORING_PLAN.md  QUICK_WINS_SUMMARY.md  README.md  aitbc-coordinator-api-wrapper.py  aitbc-coordinator-api.service  aitbc-coordinator-proxy-health.timer  check_services.sh  demo_client_miner_workflow.py  deploy_cross_chain_reputation_staging.sh  deploy_services.sh  init_db.py  integration_test.py  manage_services.sh  performance_test.py  pyproject.toml  requirements.txt  test_agent_identity_basic.py  test_agent_identity_integration.py  test_client_miner.py  test_cross_chain_integration.py  test_cross_chain_integration_phase2.py  test_cross_chain_reputation.py  test_developer_ecosystem_dao.py  test_global_marketplace.py  test_global_marketplace_integration.py  test_global_marketplace_integration_phase3.py  test_health_endpoints.py
apps/edge-api/: edge-api.service  pyproject.toml
apps/governance/: README.md  aitbc-governance-wrapper.py  aitbc-governance.service  alembic.ini  governance-service.service  pyproject.toml
apps/governance-service/: README.md  aitbc-governance.service  governance-service.service  pyproject.toml
apps/gpu/: README.md  aitbc-gpu-wrapper.py  aitbc-gpu.service  gpu-service.service  pyproject.toml
apps/gpu-service/: README.md  aitbc-gpu.service  gpu-service.service  pyproject.toml
apps/hermes/: README.md  aitbc-hermes-wrapper.py  aitbc-hermes.service  pyproject.toml
apps/marketplace-service/: README.md  aitbc-marketplace-wrapper.py  aitbc-marketplace.service  pyproject.toml
apps/miner-node/: README.md  pyproject.toml
apps/openclaw-service/: pyproject.toml
apps/pool-hub/: README.md  aitbc-pool-hub.service  alembic.ini  pyproject.toml
apps/shared-core/: README.md  pyproject.toml
apps/shared-domain/: README.md  pyproject.toml
apps/trading/: README.md  aitbc-trading-wrapper.py  aitbc-trading.service  pyproject.toml  trading-service.service
apps/trading-service/: README.md  aitbc-trading.service  pyproject.toml  trading-service.service
apps/wallet/: MULTICHAIN_ENHANCEMENTS_SUMMARY.md  README.md  aitbc-wallet-daemon.service  aitbc-wallet-wrapper.py  aitbc-wallet.service  pyproject.toml  requirements.txt  simple_daemon.py  test_multichain_endpoints.py
cli/: CLI_CLEANUP_PLAN.md  CLI_TEST_RESULTS.md  CLI_USAGE_GUIDE.md  DEMONSTRATION_WALLET_CHAIN_CONNECTION.md  DISABLED_COMMANDS_CLEANUP.md  FILE_ORGANIZATION_SUMMARY.md  LOCALHOST_ONLY_ENFORCEMENT_SUMMARY.md  MARKETPLACE_IMPLEMENTATION_SUMMARY.md  MULTICHAIN_IMPLEMENTATION_SUMMARY.md  QUICK_INSTALL_GUIDE.md  README.md  WALLET_CHAIN_CONNECTION_SUMMARY.md  __init__.py  advanced_wallet.py  aitbc-fixed.py  aitbc_cli.legacy.py  aitbc_cli.py  click_cli.py  client.py  client_enhanced.py  enterprise_cli.py  extended_features.py  genesis_ait_devnet_proper.yaml  genesis_cli.py  install_local_package.sh  integrate_miner_cli.sh  keystore_auth.py  main.py  main_minimal.py  miner.py  miner_cli.py  miner_gpu_test.py  miner_management.py  multichain_config.yaml  output.txt  parser_context.py  plugins.py  pyproject.toml  pytest.ini  requirements-cli.txt  (+14 more)
cli/aitbc/: __init__.py
cli/aitbc_cli/: __init__.py  config.py  dual_mode_wallet_adapter.py  kyc_aml_providers.py  main.py  wallet_migration_service.py
cli/aitbc_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
cli/auth/: __init__.py
cli/cleanup/: CLI_CLEANUP_SUMMARY.md
cli/commands/: admin.py  advanced_analytics.py  agent.py  agent_comm.py  ai.py  ai_surveillance.py  ai_trading.py  analytics.py  arbitrage.py  auth.py  blockchain.py  blockchain_event_bridge.py  chain.py  client.py  compliance.py  config.py  cross_chain.py  dao.py  database.py  deployment.py  edge.py  enterprise_integration.py  exchange.py  explorer.py  (+40 more)
(+7169 files in other folders)
