[tool.poetry]
name = "aitbc"
version = "0.6.0"
description = "AI Agent Compute Network - Main Project"
authors = ["AITBC Team"]



[tool.poetry.dependencies]
python = ">=3.13.5,<3.14.1 || >3.14.1,<3.15"
# Core Web Framework
fastapi = ">=0.115.6"
uvicorn = {extras = ["standard"], version = ">=0.34.0"}
gunicorn = ">=23.0.0"
starlette = ">=1.0.1"
# Database & ORM
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.49"}
sqlmodel = ">=0.0.38"
alembic = ">=1.18.4"
aiosqlite = ">=0.20.0"
asyncpg = ">=0.30.0"
# Shared models
aitbc-shared = {path = "packages/aitbc-shared", develop = true}
# Configuration & Environment
pydantic = "2.13.3"
pydantic-settings = ">=2.13.1"
python-dotenv = ">=1.1.0"
# Rate Limiting & Security
slowapi = ">=0.1.9"
limits = ">=5.8.0"
prometheus-client = ">=0.21.1"
pyjwt = {extras = ["crypto"], version = ">=2.9.0"}
# HTTP Client & Networking
httpx = ">=0.28.1"
requests = ">=2.32.4"
urllib3 = ">=2.7.0"
aiohttp = ">=3.12.14"
aiostun = ">=0.1.0"
# Cryptocurrency & Blockchain
cryptography = ">=46.0.0"
argon2-cffi = ">=23.1.0"
pynacl = ">=1.6.2"
ecdsa = ">=0.19.0"
base58 = ">=2.1.1"
bech32 = ">=1.2.0"
web3 = ">=7.15.0"
eth-account = ">=0.13.7"
# Data Processing
pandas = ">=2.2.3"
numpy = ">=2.2.0"
# Machine Learning & AI
torch = ">=2.11.0"
torchvision = ">=0.26.0"
# CLI Tools
click = ">=8.3.2"
rich = ">=14.3.3"
typer = ">=0.24.1"
click-completion = ">=0.5.2"
tabulate = ">=0.10.0"
colorama = ">=0.4.6"
keyring = ">=25.7.0"
# JSON & Serialization
msgpack = ">=1.1.2"
python-multipart = ">=0.0.27"
# Logging & Monitoring
structlog = ">=25.1.0"
sentry-sdk = ">=2.20.0"
# Utilities
python-dateutil = ">=2.9.0"
pytz = ">=2026.1"
schedule = ">=1.2.2"
aiofiles = ">=25.1.0"
pyyaml = ">=6.0.2"
# Async Support
asyncio-mqtt = ">=0.16.2"
websockets = ">=14.1.0"
# IPFS & Distributed Storage
ipfshttpclient = ">=0.7.0"
aioredis = ">=2.0.1"
# Image Processing (for AI services)
pillow = ">=11.1.0"
opencv-python = ">=4.11.0"
# Additional Dependencies
redis = ">=5.2.1"
psutil = ">=6.1.0"
tenseal = ">=0.3.0"
idna = ">=3.7"
hypothesis = "^6.152.4"

[tool.poetry.group.dev.dependencies]
pytest = "9.0.3"
pytest-asyncio = "1.3.0"
pytest-timeout = "2.4.0"
pytest-mock = ">=3.12.0"
black = "24.4.2"
flake8 = "7.3.0"
ruff = "0.15.10"
mypy = "2.0.0"
isort = "8.0.1"
pre-commit = "4.5.1"
bandit = "1.9.4"
pydocstyle = "6.3.0"
pyupgrade = "3.21.2"
safety = "3.7.0"
pytest-cov = "6.0.0"
types-requests = ">=2.32.0"
types-PyYAML = ">=6.0.0"
types-python-dateutil = ">=2.9.0"
types-psycopg2 = ">=2.9.0"
tqdm = ">=4.66.0"
ipython = ">=8.0.0"

[tool.poetry.extras]
ai-ml = [
    "openai>=1.3.0",
    "google-cloud-translate>=3.11.0",
    "deepl>=1.16.0",
    "langdetect>=1.0.9",
    "polyglot>=16.7.4",
    "fasttext>=0.9.2",
    "nltk>=3.8.1",
    "spacy>=3.7.0",
    "transformers>=4.0.0",
]
security = [
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "sentry-sdk>=2.0.0",
]
minimal = [
    "psycopg2-binary>=2.9.0",
    "orjson>=3.11.0",
    "lz4>=4.3.0",
]

[tool.black]
line-length = 127
target-version = ['py313']
include = '\\.pyi?$'
extend-exclude = '''
/(
  # directories
  \\.eggs
  | \\.git
  | \\.hg
  | \\.mypy_cache
  | \\.tox
  | \\.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 127
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.13"
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]

# Enable stricter type checking for incremental migration
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
strict_optional = true

# Start with honest type checking on core modules only
# Incrementally expand this list as type errors are fixed
exclude = [
    # Exclude modules with known missing dependencies (opentelemetry)
    "^aitbc/tracing\\.py$",
    "^aitbc/tracing_opentelemetry\\.py$",

    # Exclude large legacy modules for incremental migration
    "^aitbc/agent_bridge/",
    "^aitbc/agent_compliance/",
    "^aitbc/agent_protocols/",
    "^aitbc/agent_registry/",
    "^aitbc/agent_trading/",
    "^aitbc/oracles/",
    "^aitbc/training_setup/",

    # Exclude all apps except coordinator-api core (incremental)
    "^apps/(?!coordinator-api)",

    # Exclude test files
    "^tests/",
    "^cli/",

    # Exclude packages except aitbc-shared (incremental)
    "^packages/(?!aitbc-shared)",

    # Exclude generated/migration files
    "^contracts/",
    "^plugins/",
    "^scripts/",
    "^apps/coordinator-api/alembic/",
    "^apps/coordinator-api/migrations/",

    # Exclude test/example/demo files
    "^apps/coordinator-api/tests/",
    "^apps/coordinator-api/scripts/",
    "^apps/coordinator-api/integration_test\\.py$",
    "^apps/coordinator-api/demo_client_miner_workflow\\.py$",
    "^apps/coordinator-api/init_db\\.py$",
    "^apps/coordinator-api/examples/",

    # Exclude large coordinator-api contexts for incremental migration
    "^apps/coordinator-api/src/app/contexts/advanced_rl/",
    "^apps/coordinator-api/src/app/contexts/ai_analytics/",
    "^apps/coordinator-api/src/app/contexts/community/",
    "^apps/coordinator-api/src/app/contexts/confidential/",
    "^apps/coordinator-api/src/app/contexts/ecosystem/",
    "^apps/coordinator-api/src/app/contexts/governance/",
    "^apps/coordinator-api/src/app/contexts/hermes/",
    "^apps/coordinator-api/src/app/contexts/infrastructure/",
    "^apps/coordinator-api/src/app/contexts/language/",
    "^apps/coordinator-api/src/app/contexts/marketplace/",
    "^apps/coordinator-api/src/app/contexts/multimodal/",
    "^apps/coordinator-api/src/app/contexts/security/",
    "^apps/coordinator-api/src/app/contexts/staking/",

    # Exclude large coordinator-api services for incremental migration
    "^apps/coordinator-api/src/app/services/agent_coordination/",
    "^apps/coordinator-api/src/app/services/ecosystem_service\\.py$",
    "^apps/coordinator-api/src/app/services/enterprise_integration/",
    "^apps/coordinator-api/src/app/services/gpu_multimodal\\.py$",
    "^apps/coordinator-api/src/app/services/multi_chain_transaction_manager\\.py$",
    "^apps/coordinator-api/src/app/services/portfolio_service\\.py$",
]

[[tool.mypy.overrides]]
module = [
    "aitbc.*",
    "apps.coordinator_api.*",
]
ignore_missing_imports = false

# NOTE: Use `mypy --follow-imports=skip <file>` to check individual files during development
# Gradually remove files from the exclude list as type errors are fixed

[[tool.mypy.overrides]]
module = [
    "torch.*",
    "web3.*",
    "eth_account.*",
    "sqlalchemy.*",
]
ignore_missing_imports = true

# Tech debt: these modules still have type errors that require per-file annotation work.
# Tracked in gap analysis. Remove entries as each module is fixed.
# Clean (no override needed): domain.*, schemas.*, auth, exceptions, models.*, storage.*, utils.*
#
# GRADUAL TYPE CHECKING APPROACH (2026-05-31):
# - Critical apps (coordinator-api, blockchain-node, agent-coordinator) have ~1,325 type errors
# - Instead of fixing all at once, we enforce types on NEW/MODIFIED files only
# - Developers should add type annotations to any files they touch
# - Use `mypy --follow-imports=skip <file>` to check individual files during development
#
# NOTE: per-file-ignores in pyproject.toml is NOT supported by mypy 2.0.0
# Instead, # mypy: ignore-errors has been added directly to 73 source files
# See: apps/coordinator-api/src/app/services/tenant_management.py (and 72 others)

# Gradual type checking approach - no apps currently ignored

[tool.ruff]
line-length = 127
target-version = "py313"
extend-exclude = ["cli/templates/handler_template.py", "tests/cli/command_test_template.py"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "E722", # bare except (explicitly enforce)
    "G001", # logging statement uses f-string
    "G002", # logging statement uses .format() or % formatting
    "B008", # do not perform function calls in argument defaults
    "B023", # function definition does not bind loop variable
    "ASYNC", # async/await best practices
]
ignore = [
    "E501",  # line too long, handled by black
    "C901",  # too complex
    "UP040", # Don't upgrade TypeAlias to `type` statement (breaks MyPy base class usage)
    "ASYNC105", # Allow async context managers in sync functions (for gradual migration)
    "ASYNC109", # Allow timeout parameter in async functions (valid pattern in our codebase)
    "E402", # Allow module level imports not at top of file (for re-exports in crypto/security.py and network/http_client.py)
    "ASYNC210", # Allow blocking HTTP methods in async functions (for alerting code)
    "C401", # Allow generator expressions in set() calls (style preference)
    "UP041", # Keep asyncio.TimeoutError for explicit async timeout handling
    "ASYNC230", # Allow blocking file operations in async functions (for systemd operations, file I/O)
    "ASYNC221", # Allow blocking subprocess calls in async functions (for systemctl commands)
    "W293", # Allow trailing whitespace (style preference)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
"tests/*" = ["B011"]
"cli/templates/handler_template.py" = ["ALL"]
"tests/cli/command_test_template.py" = ["ALL"]

[tool.pydocstyle]
convention = "google"
add_ignore = ["D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config --cov=aitbc --cov=apps --cov=packages --cov-report=term-missing --cov-report=html:tests/htmlcov"
testpaths = [
    "tests/unit",
    "tests/integration",
    "tests/e2e",
    "tests/security",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "e2e: marks tests as end-to-end tests",
    "security: marks tests as security tests",
    "contract: marks tests as contract tests",
]

[tool.coverage.run]
source = ["aitbc", "apps", "packages", "cli"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/migrations/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
