[tool.poetry]
name = "aitbc-agent-coordinator"
version = "0.1.0"
description = "AITBC Agent Coordination System"
authors = ["AITBC Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
redis = "^5.0.0"
celery = "^5.3.0"
websockets = "^12.0"
aiohttp = "^3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.9.0"
mypy = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
