[tool.poetry]
name = "aitbc-agent-coordinator"
version = "0.1.0"
description = "AITBC Agent Coordination System"
authors = ["AITBC Team"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
pydantic = "^2.4.0"
redis = "^5.0.0"
celery = "^5.3.0"
websockets = "^12.0"
aiohttp = "^3.9.0"
pyjwt = "^2.8.0"
bcrypt = "^4.0.0"
prometheus-client = "^0.18.0"
psutil = "^5.9.0"
numpy = "^1.24.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.9.0"
mypy = "^1.6.0"
types-redis = "^4.6.0"
types-requests = "^2.31.0"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "celery.*",
    "prometheus_client.*",
    "psutil.*",
    "numpy.*"
]
ignore_missing_imports = true

[tool.mypy]
plugins = ["pydantic_pydantic_plugin"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
