[tool.poetry]
name = "aitbc-agent-coordinator"
version = "0.1.0"
description = "AITBC Agent Coordination System"
authors = ["AITBC Team"]

[tool.poetry.dependencies]
python = "^3.13"
# All dependencies managed centrally in root pyproject.toml
# This file only defines package structure for the agent-coordinator

[tool.poetry.group.dev.dependencies]
# Dev dependencies managed centrally in root pyproject.toml

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
plugins = ["pydantic_pydantic_plugin"]

[[tool.mypy.overrides]]
module = [
    "redis.*",
    "celery.*",
    "prometheus_client.*",
    "psutil.*",
    "numpy.*"
]
ignore_missing_imports = true

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
