[tool.poetry]
name = "aitbc-agent-management"
version = "0.1.0"
description = "AITBC Agent Management Service - AI agent lifecycle, orchestration, and performance tracking"
authors = ["AITBC Team <team@aitbc.dev>"]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.13.5,<3.14.1 || >3.14.1,<3.15"
aitbc = {path = "../../../"}
aitbc-shared-domain = {path = "../../shared-domain"}
aitbc-shared-core = {path = "../../shared-core"}
# All other dependencies managed centrally in root pyproject.toml
# This file only defines package structure for agent-management

[tool.poetry.group.dev.dependencies]
# Dev dependencies managed centrally in root pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
