[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = "AITBC API Gateway for routing to microservices"
authors = ["AITBC Team <team@aitbc.dev>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = ">=0.115.6"
uvicorn = "^0.24.0"
httpx = ">=0.28.1"
aitbc-core = {path = "../../packages/py/aitbc-core", develop = true}

[tool.poetry.group.test.dependencies]
pytest = ">=9.0.3"
pytest-asyncio = ">=1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

