[tool.poetry]
name = "blockchain-event-bridge"
version = "0.1.0"
description = "Bridge between AITBC blockchain events and OpenClaw agent triggers"
authors = ["AITBC Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.27.0"
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
prometheus-client = "^0.21.0"
aiosqlite = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
black = "^24.10.0"
ruff = "^0.8.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
