[tool.poetry]
name = "aitbc-blockchain-node"
version = "v0.2.3"
description = "AITBC blockchain node service"
authors = ["AITBC Team"]
packages = [
    { include = "aitbc_chain", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
cryptography = ">=46.0.0"
# All dependencies managed centrally in /opt/aitbc/requirements-consolidated.txt
# Use: ./scripts/install-profiles.sh web database blockchain

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.23.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
