[tool.poetry]
name = "aitbc-blockchain-node"
version = "v0.2.3"
description = "AITBC blockchain node service"
authors = ["AITBC Team"]
packages = [
    { include = "aitbc_chain", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
# All dependencies managed centrally in root pyproject.toml
# This file only defines package structure for the blockchain-node

[tool.poetry.extras]
uvloop = ["uvloop"]

[tool.poetry.group.dev.dependencies]
# Dev dependencies managed centrally in root pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
