[tool.poetry]
name = "aitbc-coordinator-api"
version = "0.1.0"
description = "AITBC Coordinator API service"
authors = ["AITBC Team"]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
pydantic = ">=2.7.0"
pydantic-settings = ">=2.2.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.47"}
aiosqlite = "^0.20.0"
sqlmodel = "^0.0.16"
httpx = "^0.27.0"
python-dotenv = "^1.0.1"
slowapi = "^0.1.8"
orjson = "^3.10.0"
gunicorn = "^22.0.0"
prometheus-client = "^0.19.0"
aitbc-crypto = {path = "../../packages/py/aitbc-crypto"}
asyncpg = ">=0.29.0"
aitbc-core = {path = "../../packages/py/aitbc-core"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.0"
httpx = {extras=["cli"], version="^0.27.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
