[tool.poetry]
name = "aitbc-coordinator-api"
version = "v0.2.3"
description = "AITBC Coordinator API service"
authors = ["AITBC Team"]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
# All dependencies managed centrally in /opt/aitbc/requirements-consolidated.txt
# Use: ./scripts/install-profiles.sh web database blockchain

[tool.poetry.group.dev.dependencies]
pytest = ">=8.2.0"
pytest-asyncio = ">=0.23.0"
httpx = {extras=["cli"], version=">=0.27.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
