[tool.poetry]
name = "aitbc-coordinator-api"
version = "v0.2.3"
description = "AITBC Coordinator API service"
authors = ["AITBC Team"]
packages = [
    { include = "app", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.13"
# All dependencies managed centrally in root pyproject.toml
# This file only defines package structure for the coordinator-api

[tool.poetry.group.dev.dependencies]
# Dev dependencies managed centrally in root pyproject.toml

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
