[tool.poetry]
name = "governance-service"
version = "0.1.0"
description = "AITBC Governance Service for governance operations"
authors = ["AITBC Team <team@aitbc.dev>"]

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlmodel = "^0.0.14"
asyncpg = "^0.30.0"
aitbc-core = {path = "../../packages/py/aitbc-core", develop = true}

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

