[tool.poetry]
name = "governance"
version = "0.1.0"
description = "AITBC Governance Service for governance operations"
authors = ["AITBC Team <team@aitbc.dev>"]

[tool.poetry.dependencies]
python = ">=3.13.5,<3.14.1 || >3.14.1,<3.15"
# All dependencies managed centrally in root pyproject.toml
# This file only defines package structure for governance service


[tool.poetry.group.test.dependencies]
# Test dependencies managed centrally in root pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
