[tool.poetry]
name = "gpu-service"
version = "0.1.0"
description = "AITBC GPU Service for GPU resource management"
authors = ["AITBC Team <team@aitbc.dev>"]

[tool.poetry.dependencies]
python = ">=3.13.5,<3.14.1 || >3.14.1,<3.15"
# All dependencies managed centrally in root pyproject.toml
# This file only defines package structure for GPU service


[tool.poetry.group.test.dependencies]
# Test dependencies managed centrally in root pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
