[tool.poetry]
name = "hermes-service"
version = "0.1.0"
description = "AITBC hermes Service for agent orchestration and edge computing"
authors = ["AITBC Team"]

[tool.poetry.dependencies]
python = ">=3.13.5,<3.14.1 || >3.14.1,<3.15"
# All dependencies managed centrally in root pyproject.toml
# This file only defines package structure for hermes service

[tool.poetry.group.dev.dependencies]
# Dev dependencies managed centrally in root pyproject.toml

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
