[project]
name = "marketplace-service"
version = "0.1.0"
description = "AITBC Marketplace Service for GPU marketplace operations"
authors = [
    {name = "AITBC Team", email = "team@aitbc.dev"}
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "sqlmodel>=0.0.14",
    "asyncpg>=0.30.0",
    "aitbc-core",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "marketplace_service", from = "src" }
]
